--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "recharts": "^2.1.16",
+    "spotify-web-api-js": "^1.5.2",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
