--- a/frontend/src/backend/package.json
+++ b/frontend/src/backend/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "axios": "^1.2.0",
     "body-parse": "^0.1.0",
+    "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^6.7.5",
     "spotify-web-api-node": "^5.0.2"
   },
-  "proxy": "http://localhost:8888/"
+  "proxy": "http://localhost:3000"
 }
