--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.2",
     "framer-motion": "^7.6.7",
     "mongoose": "^6.7.2",
+    "next": "^13.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
